Fix filter button wrapping

--- a/src/components/Filter.css
+++ b/src/components/Filter.css
@@ -8,4 +8,5 @@
     display: flex;
     justify-content: space-around;
     padding: 18px 0;
+    flex-wrap: wrap;
 }
